# spot2-challenge

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: docker-image.yml  tests.yaml
src/spot2_challenge/: logging.py  logic.py  main.py  memory.py  schemas.py
src/streamlit/: app.py
tests/: test_call_openai.py  test_chat.py  test_memory.py
